Pipes: A Data Flow Framework using Process Graphs 
"http://pipes.tinkerpop.com":http://pipes.tinkerpop.com

bc. <repository>
  <id>tinkerpop-repository</id>
  <name>TinkerPop Maven2 Repository</name>
  <url>http://tinkerpop.com/maven2</url>
</repository>

==<hr/>==

!http://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-clogged-pipe.png!

h3. Version 0.2 (Clogged -- NOT OFFICIALLY RELEASED YET)

bc. <dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.2-SNAPSHOT</version>
</dependency>


==<hr/>==

!http://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-leaky-pipe.png!

h3. Version 0.1 (Leaky -- September 22, 2010)

bc. <dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.1</version>
</dependency>

* Initial release as the core engine for Gremlin 0.5